--- a/Views/Configuration.xaml
+++ b/Views/Configuration.xaml
@@ -10,26 +10,30 @@
 			
 			<!-- USER'S INFORMATIONS -->
 			<StackPanel Margin="5,15,5,5" Orientation="Vertical">
-				<GroupBox Header="User's informations" Margin="0,0,0,0"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#1BA1E2 ">
-					<StackPanel  Orientation="Vertical" HorizontalAlignment="Stretch" Height="150" >
+				<GroupBox Header="Configuration" Margin="0,0,0,0"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#1BA1E2 ">
+					<StackPanel  Orientation="Vertical" HorizontalAlignment="Stretch" Height="250" >
 
-						<Label Content="Basic options of the exe"></Label>
+						<TextBlock TextWrapping="Wrap" FontSize="15" Margin="5,5,5,10">Basic options of the exe</TextBlock>
 
 						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-							<Label Content="EXE NAME:" Width="120"/>
+							<Label Content="OUTPUT PATH:" Width="150"/>
+							<TextBox x:Name="txtBoxPath" Width="200" Text="" />
+							<Button x:Name="btnOutputPath" Content="Browse" Width="80" Margin="5,0,0,0"/>
+						</StackPanel>
+
+						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+							<Label Content="EXE NAME:" Width="150"/>
 							<TextBox x:Name="txtBoxExeName" Width="200" Text="" />
 						</StackPanel>
 
-						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-							<Label Content="OUTPUT PATH:" Width="120"/>
-							<TextBox x:Name="txtBoxPath" Width="200" Text="" />
-							<Button x:Name="btnOutputPath" Content="Browse" Width="100" Margin="5,0,0,0"/>
-						</StackPanel>
-
-
-						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-							<Label Content="SINGLE INSTANCE:" Width="120"/>
-							<TextBox x:Name="SingleInstance" Width="200" Text="" />
+						<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+							<Label Content="SINGLE INSTANCE:" Width="150"/>
+							<Controls:ToggleSwitch x:Name="singleInstance"
+                                   Margin="0,3,5,0"
+                                   IsChecked="True"
+                                   OffLabel=" Disabled"
+                                   OnLabel=" Enabled"
+                                   Style="{DynamicResource MahApps.Metro.Styles.ToggleSwitch.Win10}" />
 						</StackPanel>
 
 					</StackPanel>
