--- a/Views/Configuration.xaml
+++ b/Views/Configuration.xaml
@@ -16,19 +16,19 @@
 						<TextBlock TextWrapping="Wrap" FontSize="15" Margin="5,5,5,10">Basic options of the exe</TextBlock>
 
 						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-							<Label Content="OUTPUT PATH:" Width="150"/>
-							<TextBox x:Name="txtBoxPath" Width="200" Text="" />
-							<Button x:Name="btnOutputPath" Content="Browse" Width="80" Margin="5,0,0,0"/>
+							<Label Content="OUTPUT PATH:" Width="130"/>
+							<TextBox x:Name="ConfTxtBoxPath" Width="200" Text="" />
+							<Button x:Name="ConfBtnPath" Content="Browse" Width="80" Margin="5,0,0,0"/>
 						</StackPanel>
 
 						<StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-							<Label Content="EXE NAME:" Width="150"/>
-							<TextBox x:Name="txtBoxExeName" Width="200" Text="" />
+							<Label Content="EXE NAME:" Width="130"/>
+							<TextBox x:Name="ConfExeName" Width="200" Text="" />
 						</StackPanel>
 
 						<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-							<Label Content="SINGLE INSTANCE:" Width="150"/>
-							<Controls:ToggleSwitch x:Name="singleInstance"
+							<Label Content="SINGLE INSTANCE:" Width="130"/>
+							<Controls:ToggleSwitch x:Name="ConfSingleInstance"
                                    Margin="0,3,5,0"
                                    IsChecked="True"
                                    OffLabel=" Disabled"
