--- a/Views/Advanced.xaml
+++ b/Views/Advanced.xaml
@@ -25,7 +25,9 @@
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                         <Label Content="EXECUTION PATH:" Width="130"/>
                         <TextBox x:Name="txtBoxPath" Controls:TextBoxHelper.Watermark="USER/TEMP" Width="200" />
-                        <Button x:Name="btnOutputPath" Content="Browse" Width="100" Margin="5,0,0,0"/>
+                        <Button x:Name="btnOutputPath" Content="Browse" Width="100" Margin="5,0,0,0"
+                        
+                        />
                     </StackPanel>
 
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
